Change endpoint path
